# op-observe

./: .env.example  .gitignore  README.md  agent.md  agents.md  bootstrap.sh  otel-collector-config.yaml  pyproject.toml  pytest.ini
agentic_radar/: __init__.py  cli.py  detectors.py  evidence.py  models.py  object_store.py  parser.py  reporting.py  runner.py  testing.py
benchmarks/: reranker_benchmark.py
config/: security_targets.toml
deploy/: docker-compose.metrics.yml
docs/: ci-cd.md
enablement/: __init__.py  agent.md
env/: .env.example
keycloak/: rbac-policy.json
langgraph/: __init__.py  graph.py
observability/: __init__.py  agent.md
op_observe/: __init__.py  cli.py  config.py  logging_integration.py  models.py  orchestrator.py  rerankers.py  retrieval.py  telemetry.py  utils.py
opobserve/: __init__.py  agent.py  orchestrator.py  radar.py  telemetry.py
otel_collector/: README.md  docker-compose.yaml
prometheus/: prometheus.yml
qdrant_client/: __init__.py
retrieval/: __init__.py  agent.md
scripts/: __init__.py  bootstrap.py  build_security_artifacts.py  run_radar_scan.py  run_vulnerability_audit.py
security/: __init__.py  agent.md
security_pipeline/: __init__.py  pipeline.py
telemetry/: __init__.py  agent.md
tests/: _baseline_imports.py  conftest.py  test_agentic_security_template.py  test_baseline_package.py  test_benchmark.py  test_bootstrap.py  test_bootstrap_script.py  test_cli.py  test_config.py  test_dashboards.py  test_environment.py  test_guarded_rag_template.py  test_initializers.py  test_instrumentation.py  test_loader.py  (+24 more)
(+119 files in other folders)
