[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "op-observe-reporting"
version = "0.1.0"
description = "Agentic security report builder"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

